# freedv-tnc

./: .gitignore  README.md  README2.md  TNC-freedv.py  pyproject.toml
freedvtnc/: __main__.py  freedv.py  rf.py  rigctl.py  tnc.py  winhelpers.py
