[tool.poetry]
name = "freedvtnc"
version = "0.1.5"
description = ""
authors = ["xssfox"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.6"
pyaudio = "^0.2.11"
kissfix = "^7.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
freedvtnc = 'freedvtnc:__main__.main'
