[tool.poetry]
name = "freedvtnc"
version = "0.3.4"
description = ""
authors = ["xssfox"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.6"
pyaudio = "^0.2.11"
kissfix = "^7.0.11"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
freedvtnc = 'freedvtnc:__main__.main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

